--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
-*.sqlite3
+env
+venv
 *.pyc
-*.pyo
-*.swp
-*.swo
-*.swn
-*.esproj
-.idea
-.Ds_Store
-*~
-git_ignore
-build
-.noseids
-media
-static
-*.dat
-.env
+.DS_Store
+*.sublime-*
+
